css/home.css
body {
  display: flex;
  flex-direction: column;
  height: 100%;
}

.header-logo {
  flex: none;
}

header {
  flex: none;
  height: max-content;
  color: #141414;
}

.hero {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 1.5rem;
  padding: 1.5rem;
  margin: 0 auto;
  max-width: 800px;
}

.hero-text {
  display: flex;
  flex: 1 1 200px;
  flex-direction: column;
  justify-content: center;
}

.hero-text h1 {
  margin: 0;
  font-size: 3rem;
  line-height: 1.3;
}

.hero-text h1 span {
  color: #9f591a;
}

.hero-image {
  position: relative;
}

.hero-image::before,
.hero-image::after {
  position: absolute;
  font-family: 'Playfair Display', serif;
  padding: 0.25rem 1rem;
  font-weight: bold;
  border-radius: 3px;
  box-shadow: 0 5px 10px #00000036;
  color: #000;
  outline: 2px solid #000000;
  animation:
      1200ms
      ease-in-out
      infinite
      alternate;
}

.hero-image::before {
  content: 'simple';
  left: 0px;
  top: -8px;
  background-color: #ce8c50;
  animation-name: float-up;
}

.hero-image::after {
  content: 'delicious';
  right: 10px;
  bottom: 15px;
  background-color: #e2ebf2;
  animation-name: float-down;
}

.hero-image:hover::before,
.hero-image:hover::after {
  animation-play-state: paused;
}

.hero-image img {
  height: auto;
  width: 100%;
  max-width: 250px;
}

/* Interactive class for header logo */
.show-header {
  top: 0;
}

main {
  flex: 1;
}

.recipes {
  padding: 1rem 1.5rem;
}

.recipes h2,
.recipes h3,
.recipes p {
  margin: 0;
}

.recipes h2 {
  width: 100%;
}

.recipes div {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem 1.5rem;
  margin: 0 auto;
  padding-top: 1rem;
  max-width: 800px;
  border-top: 1px solid #42240b63;
}

.recipes article {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 0.7rem;
  padding: 0.5rem;
  flex: 1 1 240px;
  background-color: #eddaca;
  border-radius: 3px;
  outline: 1px solid #42240b63;
}

.recipes img {
  height: 250px;
  width: 100%;
  border: 4px solid #141414;
  border-radius: 3px;
  object-fit: cover;
}

.recipes a {
  margin-top: auto;
  text-decoration: underline;
  color: #141414;
}

.recipes a:focus {
  outline-color: #141414;
}

.recipes a:hover {
  text-decoration: none;
  background-color: #d6abba;
  color: #42240b;
}

.recipes a:active {
  background-color: #ddbbc7;
  color: #42240b;
}

footer {
  justify-content: center;
  margin-top: 1.5rem;
  width: 100%;
}

footer div {
  height: 32px;
  width: 800px;
  text-align: right;
}

@keyframes float-up {
  to {
    transform: translateY(0px);
  }

  from {
    transform: translateY(10px);
  }
}

@keyframes float-down {
  to {
    transform: translateY(0px);
  }

  from {
    transform: translateY(-10px);
  }
}

